<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal">

    <Button
        android:id="@+id/englishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        app:layout_constraintEnd_toStartOf="@+id/spanishButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/spanishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spanish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/englishButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupGuessOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="guessOneText,guessOneLabel,guessOneCheckText,guessOneCheckLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessOneLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/guess_1"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toStartOf="@+id/guessOneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spanishButton" />

    <TextView
        android:id="@+id/guessOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessOneLabel"
        tools:text="@string/guess_placeholder" />

    <TextView
        android:id="@+id/guessOneCheckLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/guess_1_check"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toStartOf="@+id/guessOneCheckText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guessOneLabel" />

    <TextView
        android:id="@+id/guessOneCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessOneCheckLabel"
        tools:text="@string/guess_placeholder" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupGuessTwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="guessTwoText,guessTwoLabel,guessTwoCheckText,guessTwoCheckLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessTwoLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/guess_2"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toStartOf="@+id/guessTwoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guessOneCheckLabel" />

    <TextView
        android:id="@+id/guessTwoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessTwoLabel"
        tools:text="@string/guess_placeholder" />

    <TextView
        android:id="@+id/guessTwoCheckLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/guess_2_check"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toStartOf="@+id/guessTwoCheckText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guessTwoLabel" />

    <TextView
        android:id="@+id/guessTwoCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessTwoCheckLabel"
        tools:text="@string/guess_placeholder" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupGuessThree"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="guessThreeText,guessThreeLabel,guessThreeCheckText,guessThreeCheckLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessThreeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/guess_3"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toStartOf="@+id/guessThreeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guessTwoCheckLabel" />

    <TextView
        android:id="@+id/guessThreeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessThreeLabel"
        tools:text="@string/guess_placeholder" />

    <TextView
        android:id="@+id/guessThreeCheckLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/guess_3_check"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toStartOf="@+id/guessThreeCheckText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guessThreeLabel" />

    <TextView
        android:id="@+id/guessThreeCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessThreeCheckLabel"
        tools:text="@string/guess_placeholder" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/guessInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonBarrier"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/guessInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/guest_enter_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:paddingEnd="@dimen/margin_normal"
            android:textSize="@dimen/text_guess"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonBarrier"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/wordExpectedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:textSize="@dimen/text_guess_expected"
        app:layout_constraintBottom_toTopOf="@+id/streakText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/guess_placeholder" />

    <TextView
        android:id="@+id/streakText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:textSize="@dimen/text_guess"
        app:layout_constraintBottom_toTopOf="@+id/guessInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/streak_placeholder" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buttonBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="submitButton,resetButton" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="@+id/guessInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessInputLayout" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/reset"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/guessInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guessInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>